tests/invalid_typecheck/test_tc_assign_bool_to_int.aphi
/*
Type-check error: Cannot assign bool expression to int variable.
Assigns 'true' (bool) to variable 'x' (int).
*/

int x;

procedure main {
    x = true;
}
